yaml/7-pod-quota-mem.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: quota
spec:
  containers:
  - image: nginx
    name: nginx
    # resources:
    #   limits:
    #     memory: 300Mi
